# rd42AnalysisTools

./: -  .gitignore  AnalyseSelectionArea.py  AnalyseTransparentArea.py  Cell3D.py  CellsAnalysis.py  CenterCellAnalysis.py  ClusterChannels.py  ClusterChannelsAnalysis.py  CompareHistograms.py  CompareRuns.py  CreateRunSettings.py  Currents.py  CurrentsMonitor.py  CutManager.py  DiamondCol.py  DiamondColumns.py  FinalAnalysis.py  GetListOfMaskedPixels.py  GridAreas.py  HexagonalCell3D.py  Langaus.py  LinkFiles.py  NegativeChargesAnalysis.py  NegativeEventsAnalysis.py  NoiseAnalysis.py  NoiseAnalysis3D.py  NoiseAnalysisFull3D.py  NoiseAnalysisMulti.py  NoiseAnalysisPhantom.py  NoiseAnalysisSingleC.py  NoiseExtraction.py  PHCluster.py  PHTransp.py  PHTranspXAndYProfiles.py  ParallelManager.py  PedestalCalculations.py  PedestalDeviceCalculations.py  README.md  RectangularCell3D.py  (+30 more)
16009/: clusterData.16009.root  clustering  crossTalkCorrectionFactors.16009.txt  etaCorrection.16009.root  pedestalAnalysis  pedestalData.16009.root  rawData.16009.root
CrossTalkCorrections/: CMakeLists.txt  FeedThroughCorrection  FeedThroughCorrection.bkp  FeedThroughCorrection.bkp.2  FeedThroughCorrection.cpp  FeedThroughCorrectionTest  HowToCompile.txt
CurrentsSettings/: currents_201810.ini
RunLists/: RunList0.ini  RunList1.ini  RunList2.ini  RunList2012_felix.ini  RunList2015_felix.ini  RunList2018H9.ini  RunList2018_A8_3D_hex_all.ini  RunList2018_A8_3D_rect_all.ini  RunList2018_A8_3D_sq_all.ini  RunList2nn.ini  (+29 more)
TestRawDataInC/: AnalysisToy.py  CMakeLists.txt  README  TestDataC  main.cpp
(+678 files in other folders)
